--- a/src/app/forgot-password/forgot-password.component.scss
+++ b/src/app/forgot-password/forgot-password.component.scss
@@ -46,12 +46,12 @@
 .forgot-password-logo-title {
     font-size: 24px;
     font-weight: bold;
-    color: white;
+    color: var(--text-color);
 }
 
 .forgot-password-logo-subtitle {
     font-size: 16px;
-    color: white;
+    color: var(--text-color);
 }
 
 .forgot-password-card-container {
@@ -64,7 +64,7 @@
 .forgot-password-card {
     display: flex;
     flex-direction: column;
-    background: white;
+    background: var(--text-color);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(40, 40, 40, 0.9);
@@ -83,14 +83,14 @@
 }
 
 .back-button {
-    color: #F2C230 !important;
+    color: var(--primary-color) !important;
     margin-left: -10px;
 }
 
 .forgot-password-title {
     font-size: 24px;
     font-weight: bold;
-    color: #F2C230 !important;
+    color: var(--primary-color) !important;
     flex: 1;
     text-align: center;
     /* Centramos el título */
@@ -117,8 +117,8 @@
 }
 
 .forgot-password-button-primary {
-    background-color: #F2C230 !important;
-    color: white;
+    background-color: var(--primary-color) !important;
+    color: var(--text-color);
 }
 
 .forgot-password-info {
