--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -182,7 +182,7 @@
               </a>
               <ul class="nav nav-treeview" style="display: none;">
                 <li class="nav-item"> <a [routerLink]="'/my-account'" class="nav-link">Gestionar mi Cuenta</a> </li>
-                <li class="nav-item"> <a [routerLink]="'/personal-information'" class="nav-link">Ficha Técnica</a> </li>
+                <li class="nav-item"> <a [routerLink]="'/ficha-tecnica'" class="nav-link">Ficha Técnica</a> </li>
                 <li class="nav-item"> <a href="#" class="nav-link">Mis estadisticas / habilidades</a> </li>
               </ul>
             </li>
@@ -193,7 +193,7 @@
 
       <div class="sidebar-custom">
         <a href="#" class="btn btn-secondary hide-on-collapse pos-right"
-          style="background-color: #FFD700; color: #000000;">Cerrar sesión</a>
+          style="background-color: var(--primary-color); color: #000000;">Cerrar sesión</a>
       </div>
       <!-- <a href="#" class="btn btn-link"><i class="fas fa-cogs"></i></a> -->
     </aside>
