--- a/src/app/ficha-tecnica/ficha-tecnica.component.scss
+++ b/src/app/ficha-tecnica/ficha-tecnica.component.scss
@@ -4,8 +4,8 @@
 }
 
 .card {
-  background-color: #262524;
-  color: #FFD700;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
   border-radius: 15px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
   padding: 1.5rem;
@@ -16,8 +16,8 @@
 }
 
 .form-control {
-  background-color: #262524 !important;
-  color: white;
+  background-color: var(--secondary-color) !important;
+  color: var(--text-color);
   border: none;
 }
 
@@ -41,7 +41,7 @@
 }
 
 .personal-info .info-label {
-  color: #FFD700;
+  color: var(--primary-color);
   font-weight: bold;
 }
 
@@ -92,7 +92,7 @@
 .info-input {
   background: none;
   border: none;
-  border-bottom: 1px solid #FFD700;
+  border-bottom: 1px solid var(--primary-color);
   color: #FFFFFF;
   font-size: 1rem;
   width: 100%;
@@ -107,7 +107,7 @@
 .edit-btn {
   background: none;
   border: none;
-  color: #FFD700;
+  color: var(--primary-color);
   font-size: 1.2rem;
   cursor: pointer;
   transition: color 0.3s ease;
@@ -119,12 +119,12 @@
 
 /* Navegación por Deportes */
 .nav-tabs {
-  border-bottom: 2px solid #262524;
+  border-bottom: 2px solid var(--secondary-color);
 }
 
 .nav-link {
   color: #FFFFFF;
-  background-color: #262524;
+  background-color: var(--secondary-color);
   border-bottom: none;
   margin-right: 0.5rem;
   transition: background-color 0.3s ease, color 0.3s ease;
@@ -138,8 +138,8 @@
 }
 
 .nav-link.active {
-  background-color: #FFD700;
-  color: #262524;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
   font-weight: bold;
   border: none !important;
 }
@@ -160,8 +160,8 @@
 }
 
 .stat-field {
-  background-color: #262524;
-  color: #FFD700;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
   padding: 0.8rem 1rem;
   border-radius: 10px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
@@ -178,8 +178,8 @@
 
 /* Selector de Deportes */
 .form-select {
-  border: 1px solid #FFD700;
-  background-color: #262524;
+  border: 1px solid var(--primary-color);
+  background-color: var(--secondary-color);
   color: #FFFFFF;
   border-radius: 5px;
   font-size: 1rem;
@@ -204,7 +204,7 @@
   align-items: center;
   font-size: 0.85rem;
   /* Letra más pequeña para ahorrar espacio */
-  color: #FFD700;
+  color: var(--primary-color);
   background-color: transparent;
 }
 
@@ -223,7 +223,7 @@
 .remove-btn {
   background: none;
   border: none;
-  color: white;
+  color: var(--text-color);
   /* Discreta y minimalista */
   font-size: 0.85rem;
   /* Más pequeña y compacta */
