--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -26,95 +26,59 @@
                         aria-labelledby="edit-personal-info-tab">
                         <form #personalInfoForm="ngForm">
                             <div class="form-row">
-                              <!-- Campo: Nombre Completo -->
-                              <div class="form-group col-md-6">
-                                <label for="nombreCompleto">Nombre Completo</label>
-                                <input
-                                  type="text"
-                                  id="nombreCompleto"
-                                  class="form-control"
-                                  [(ngModel)]="user.nombreCompleto"
-                                  name="nombreCompleto"
-                                  pattern="^[a-zA-ZáéíóúÁÉÍÓÚñÑ\s]+$"
-                                  #nombreCompleto="ngModel"
-                                  required
-                                  (input)="detectChanges()"
-                                />
-                                <small
-                                  *ngIf="nombreCompleto.invalid && nombreCompleto.touched"
-                                  class="text-danger"
-                                >
-                                  Solo se permiten letras y espacios.
-                                </small>
-                              </div>
-                          
-                              <!-- Campo: Correo Electrónico -->
-                              <div class="form-group col-md-6">
-                                <label for="correo">Correo Electrónico</label>
-                                <input
-                                  type="email"
-                                  id="correo"
-                                  class="form-control"
-                                  [(ngModel)]="user.correo"
-                                  name="correo"
-                                  email
-                                  #correo="ngModel"
-                                  required
-                                  (input)="detectChanges()"
-                                />
-                                <small *ngIf="correo.invalid && correo.touched" class="text-danger">
-                                  Introduzca un correo electrónico válido.
-                                </small>
-                              </div>
+                                <!-- Campo: Nombre Completo -->
+                                <div class="form-group col-md-6">
+                                    <label for="nombreCompleto">Nombre Completo</label>
+                                    <input type="text" id="nombreCompleto" class="form-control"
+                                        [(ngModel)]="user.nombreCompleto" name="nombreCompleto"
+                                        pattern="^[a-zA-ZáéíóúÁÉÍÓÚñÑ\s]+$" #nombreCompleto="ngModel" required
+                                        (input)="detectChanges()" />
+                                    <small *ngIf="nombreCompleto.invalid && nombreCompleto.touched" class="text-danger">
+                                        Solo se permiten letras y espacios.
+                                    </small>
+                                </div>
+
+                                <!-- Campo: Correo Electrónico -->
+                                <div class="form-group col-md-6">
+                                    <label for="correo">Correo Electrónico</label>
+                                    <input type="email" id="correo" class="form-control" [(ngModel)]="user.correo"
+                                        name="correo" email #correo="ngModel" required (input)="detectChanges()" />
+                                    <small *ngIf="correo.invalid && correo.touched" class="text-danger">
+                                        Introduzca un correo electrónico válido.
+                                    </small>
+                                </div>
                             </div>
-                          
+
                             <div class="form-row">
-                              <!-- Campo: Fecha de Nacimiento -->
-                              <div class="form-group col-md-6">
-                                <label for="fechaNacimiento">Fecha de Nacimiento</label>
-                                <input
-                                  type="date"
-                                  id="fechaNacimiento"
-                                  class="form-control"
-                                  [(ngModel)]="user.fechaNacimiento"
-                                  name="fechaNacimiento"
-                                  required
-                                  (input)="detectChanges()"
-                                />
-                              </div>
-                          
-                              <!-- Campo: Teléfono -->
-                              <div class="form-group col-md-6">
-                                <label for="telefono">Teléfono</label>
-                                <input
-                                  type="tel"
-                                  id="telefono"
-                                  class="form-control"
-                                  [(ngModel)]="user.telefono"
-                                  name="telefono"
-                                  pattern="^[0-9]{10}$"
-                                  #telefono="ngModel"
-                                  required
-                                  (input)="detectChanges()"
-                                />
-                                <small *ngIf="telefono.invalid && telefono.touched" class="text-danger">
-                                  Introduzca un número de teléfono válido (10 dígitos).
-                                </small>
-                              </div>
+                                <!-- Campo: Fecha de Nacimiento -->
+                                <div class="form-group col-md-6">
+                                    <label for="fechaNacimiento">Fecha de Nacimiento</label>
+                                    <input type="date" id="fechaNacimiento" class="form-control"
+                                        [(ngModel)]="user.fechaNacimiento" name="fechaNacimiento" required
+                                        (input)="detectChanges()" />
+                                </div>
+
+                                <!-- Campo: Teléfono -->
+                                <div class="form-group col-md-6">
+                                    <label for="telefono">Teléfono</label>
+                                    <input type="tel" id="telefono" class="form-control" [(ngModel)]="user.telefono"
+                                        name="telefono" pattern="^[0-9]{10}$" #telefono="ngModel" required
+                                        (input)="detectChanges()" />
+                                    <small *ngIf="telefono.invalid && telefono.touched" class="text-danger">
+                                        Introduzca un número de teléfono válido (10 dígitos).
+                                    </small>
+                                </div>
                             </div>
-                          
+
                             <div class="text-right">
-                              <button
-                                type="button"
-                                class="btn btn-success"
-                                [disabled]="!isFormEdited || !isPersonalInfoValid()"
-                                (click)="openModal('personalInfoModal')"
-                              >
-                                Guardar Cambios
-                              </button>
+                                <button type="button" class="btn btn-success"
+                                    [disabled]="!isFormEdited || !isPersonalInfoValid()"
+                                    (click)="openModal('personalInfoModal')">
+                                    Guardar Cambios
+                                </button>
                             </div>
-                          </form>
-                          
+                        </form>
+
                     </div>
 
                     <!-- Tab: Editar Contraseña -->
